# StudioV2

./: CMakeLists.txt  README.md
irisgl/: CMakeLists.txt
irisgl/src/assimp/contrib/zlib/: zutil.h
irisgl/src/bullet3/: VERSION
irisgl/src/bullet3/src/LinearMath/: btThreads.cpp
irisgl/src/graphics/: forwardrenderer.cpp  forwardrenderer.h  graphicsdevice.h  graphicshelper.cpp  graphicshelper.h  mesh.cpp  mesh.h  model.cpp  particlerender.h  texture2d.cpp  texture2d.h  texturecube.cpp  texturecube.h  vertexlayout.h
irisgl/src/graphics/utils/: billboard.cpp  billboard.h
irisgl/src/materials/: custommaterial.cpp  defaultmaterial.cpp  defaultmaterial.h  defaultskymaterial.h
irisgl/src/scenegraph/: cameranode.cpp  cameranode.h  meshnode.cpp
src/: main.cpp  mainwindow.cpp
src/editor/: editorvrcontroller.cpp  editorvrcontroller.h  thumbnailgenerator.h
src/misc/: upgrader.cpp
src/player/: playermousecontroller.h  playerview.cpp  playerwidget.cpp
src/shadergraph/: .gitignore  CMakeLists.txt  assets.cpp  assets.h  graphtest.cpp  icons.qrc  images.qrc  main.cpp  notes.txt  shadergraph.cpp  shadergraph.h  shadergraphmainwindow.cpp  shadergraphmainwindow.h
src/shadergraph/assets/: effect_template1.json  surface.frag  surface.vert
src/shadergraph/core/: exporter.h  guidhelper.h  materialhelper.cpp  materialhelper.h  materialwriter.cpp  materialwriter.h  sockethelper.cpp  sockethelper.h  texturemanager.cpp  texturemanager.h  undoredo.cpp  undoredo.h
src/shadergraph/dialogs/: createnewdialog.cpp  createnewdialog.h  searchdialog.cpp  searchdialog.h
src/shadergraph/generator/: shadercontext.cpp  shadercontext.h  shadergenerator.cpp  shadergenerator.h
src/shadergraph/graph/: graphnode.cpp  graphnode.h  graphnodescene.cpp  graphnodescene.h  graphtest.h  nodegraph.cpp  nodegraph.h  socket.cpp  socket.h  socketconnection.cpp  socketconnection.h  sockets.h
src/shadergraph/models/: connectionmodel.cpp  connectionmodel.h  library.cpp  library.h  libraryv1.cpp  libraryv1.h  nodemodel.cpp  nodemodel.h  properties.cpp  properties.h  socketmodel.cpp  socketmodel.h
src/shadergraph/nodes/: generated.h  math.cpp  math.h  object.cpp  object.h  test.cpp  test.h  texture.cpp  texture.h  utils.h  vector.cpp  vector.h  vertex.h  view.h
src/shadergraph/propertywidgets/: basepropertywidget.cpp  basepropertywidget.h  floatpropertywidget-old.h  floatpropertywidget.cpp  floatpropertywidget.h  intpropertywidget.cpp  intpropertywidget.h  propertywidgetbase.cpp  propertywidgetbase.h  texturepropertywidget.cpp  texturepropertywidget.h  vectorpropertywidget.cpp  vectorpropertywidget.h
src/shadergraph/widgets/: graphicsview.cpp  graphicsview.h  listwidget.cpp  listwidget.h  materialsettingswidget.cpp  materialsettingswidget.h  propertylistwidget.cpp  propertylistwidget.h  scenewidget.cpp  scenewidget.h  shaderassetwidget.cpp  shaderassetwidget.h  shaderlistwidget.cpp  shaderlistwidget.h  treewidget.cpp  treewidget.h
src/widgets/: assetview.cpp  assetview.h  assetviewer.cpp  colorview.h
